--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lci2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Myprofile"></activity>
-        <activity android:name=".Account" />
         <activity android:name=".MyCoursePage" />
         <activity android:name=".SignUp" />
         <activity android:name=".Login" />
+        <activity android:name=".DisplayDoc"></activity>
+        <activity android:name=".activity_Account" />
+        <activity android:name=".activity_Explore" />
+        <activity android:name=".New_Activity" />
+        <activity android:name=".EnrolledCourses"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
